--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -416,6 +416,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -445,7 +446,7 @@
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="personCell" rowHeight="130" translatesAutoresizingMaskIntoConstraints="NO" id="AXF-Y3-xDL" customClass="PersonViewCell" customModule="SwimCoach" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="personCell" rowHeight="130" translatesAutoresizingMaskIntoConstraints="NO" id="AXF-Y3-xDL" customClass="PersonViewCell" customModule="SwimCoach" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="AXF-Y3-xDL" id="5iW-hb-U7g">
@@ -753,10 +754,10 @@
             </objects>
             <point key="canvasLocation" x="3869.5999999999999" y="478.81773399014781"/>
         </scene>
-        <!--View Controller-->
+        <!--Training Controller-->
         <scene sceneID="baz-1F-BaO">
             <objects>
-                <viewController id="RJG-Qq-Xhk" sceneMemberID="viewController">
+                <viewController id="RJG-Qq-Xhk" customClass="TrainingController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IxA-Js-arV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -764,22 +765,70 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="por-GJ-G6V">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ggS-mE-L0D">
-                                    <size key="itemSize" width="270" height="460"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="ggS-mE-L0D">
+                                    <size key="itemSize" width="180" height="122"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="80" maxX="0.0" maxY="80"/>
+                                    <inset key="sectionInset" minX="5" minY="20" maxX="5" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="trainingCell" id="LVz-tf-PO2">
-                                        <rect key="frame" x="52.666666666666664" y="80" width="270" height="460"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="trainingCell" id="LVz-tf-PO2" customClass="TrainingCollectionViewCell" customModule="SwimCoach" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="20" width="180" height="122"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="27Q-Ic-aRM">
-                                            <rect key="frame" x="0.0" y="0.0" width="270" height="460"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0va-wc-Xto">
+                                                    <rect key="frame" x="2" y="2" width="176" height="48.666666666666664"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etN-Ou-CPu">
+                                                            <rect key="frame" x="0.0" y="0.0" width="176" height="20.333333333333332"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <variation key="heightClass=regular-widthClass=regular">
+                                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                            </variation>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EG7-mR-LTf">
+                                                            <rect key="frame" x="0.0" y="28.333333333333336" width="176" height="20.333333333333336"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <variation key="heightClass=regular-widthClass=regular">
+                                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                            </variation>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqg-Vk-Mzw">
+                                                    <rect key="frame" x="9" y="94" width="162" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=regular">
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="kqg-Vk-Mzw" secondAttribute="bottom" constant="10" id="0Wg-Qi-O0J"/>
+                                                <constraint firstItem="kqg-Vk-Mzw" firstAttribute="centerX" secondItem="27Q-Ic-aRM" secondAttribute="centerX" id="4Gc-I4-bQ5"/>
+                                                <constraint firstAttribute="trailing" secondItem="0va-wc-Xto" secondAttribute="trailing" constant="2" id="CrO-W4-DYT"/>
+                                                <constraint firstItem="0va-wc-Xto" firstAttribute="top" secondItem="27Q-Ic-aRM" secondAttribute="top" constant="2" id="Ep6-cz-t7U"/>
+                                                <constraint firstItem="kqg-Vk-Mzw" firstAttribute="width" secondItem="27Q-Ic-aRM" secondAttribute="width" multiplier="0.9" id="eRl-a2-8AE"/>
+                                                <constraint firstItem="0va-wc-Xto" firstAttribute="leading" secondItem="27Q-Ic-aRM" secondAttribute="leading" constant="2" id="kxm-VQ-cTk"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="270" height="460"/>
+                                        <size key="customSize" width="180" height="122"/>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="etN-Ou-CPu" id="Em4-eb-n1v"/>
+                                            <outlet property="distanceLabel" destination="kqg-Vk-Mzw" id="jEc-zV-Jvu"/>
+                                            <outlet property="titleTrain" destination="EG7-mR-LTf" id="Z05-7A-oGH"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -793,7 +842,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcb-92-9on"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Bqd-fC-QQ4"/>
+                    <navigationItem key="navigationItem" id="Bqd-fC-QQ4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NhU-Yy-DqI">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="por-GJ-G6V" id="osC-p8-jXC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ASG-O4-nGi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
